[gd_scene load_steps=4 format=3 uid="uid://b0t118newn788"]

[ext_resource type="Script" path="res://LangDocs/prog_88a.gd" id="1_a8k6w"]
[ext_resource type="Theme" uid="uid://bkhm7mblj1udd" path="res://BigFont.tres" id="1_ibi7u"]
[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="2_aiwu1"]

[node name="Prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a8k6w")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 4.0
offset_right = 466.0
offset_bottom = 97.0
theme = ExtResource("1_ibi7u")

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 722.0
offset_top = -3.0
offset_right = 1154.0
offset_bottom = 101.0
theme = ExtResource("1_ibi7u")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 99.0
offset_right = 1151.0
offset_bottom = 496.0
theme = ExtResource("1_ibi7u")
text = "!"

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 562.0
offset_right = 211.0
offset_bottom = 652.0
theme = ExtResource("2_aiwu1")
text = "Calculate"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 952.0
offset_top = 562.0
offset_right = 1160.0
offset_bottom = 652.0
theme = ExtResource("2_aiwu1")
text = "Quit"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 564.0
offset_right = 698.0
offset_bottom = 654.0
theme = ExtResource("2_aiwu1")
text = "Clear"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
